--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <div>Steps to use the Free Online Google Indexing API Toolkit for WordPress/ Blogger/ Any Website:</div>
 <div>
    <ol style="text-align: left;">
-      <li>Open Online Indexing API Toolkit</li>
+      <li><a href="https://google-indexing-api-tool.pykit.org/" target="_blank">Open Online Indexing API Toolkit</li>
       <li>Fill in the user details- First Name Last Name, and Email ID</li>
       <li>Provide the URLs list (only the first 20 URLs will be processed at a time)</li>
       <li>Check the update type- Update URL (for fresh crawl request)/ Remove URL (remove URLs from the Google Search Results)</li>
