--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             Useful Site Links
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="https://google-indexing-api-tool.pykit.org/privacy-policy.html/" target ="_blank">Privacy Policy</a></li>
-            <li><a class="dropdown-item" href="https://google-indexing-api-tool.pykit.org/terms-and-conditions.html/" target ="_blank">Terms and Conditions</a></li>
+            <li><a class="dropdown-item" href="https://google-indexing-api-tool.pykit.org/privacy-policy.html" target ="_blank">Privacy Policy</a></li>
+            <li><a class="dropdown-item" href="https://google-indexing-api-tool.pykit.org/terms-and-conditions.html" target ="_blank">Terms and Conditions</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="https://pykit.org/" target ="_blank">Pykit Blog</a></li>
           </ul>
@@ -150,10 +150,10 @@
             Useful Site Links
           </h6>
           <p>
-            <a href="https://google-indexing-api-tool.pykit.org/privacy-policy.html/" target ="_blank" class="text-reset">Privacy Policy</a>
+            <a href="https://google-indexing-api-tool.pykit.org/privacy-policy.html" target ="_blank" class="text-reset">Privacy Policy</a>
           </p><br/>
           <p>
-            <a href="https://google-indexing-api-tool.pykit.org/terms-and-conditions.html/" target ="_blank" class="text-reset">Terms and Conditions</a>
+            <a href="https://google-indexing-api-tool.pykit.org/terms-and-conditions.html" target ="_blank" class="text-reset">Terms and Conditions</a>
           </p><br/>
           <p>
             <a href="https://pykit.org/" target ="_blank" class="text-reset">Pykit Blog</a>
