--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
         <li class="nav-item">
           <a class="nav-link" href="https://pykit.org/contact-us/" target ="_blank">Contact Us</a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Useful Site Links
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="https://google-indexing-api-tool.pykit.org/privacy-policy.html" target ="_blank">Privacy Policy</a></li>
+            <li><a class="dropdown-item" href="https://google-indexing-api-tool.pykit.org/terms-and-conditions.html" target ="_blank">Terms and Conditions</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="https://pykit.org/" target ="_blank">Pykit Blog</a></li>
+
           </ul>
     </div>
   </div>
@@ -140,6 +150,13 @@
             Useful Site Links
           </h6>
           <p>
+            <a href="https://google-indexing-api-tool.pykit.org/privacy-policy.html" target ="_blank" class="text-reset">Privacy Policy</a>
+          </p><br/>
+          <p>
+            <a href="https://google-indexing-api-tool.pykit.org/terms-and-conditions.html" target ="_blank" class="text-reset">Terms and Conditions</a>
+          </p><br/>
+          <p>
+
             <a href="https://pykit.org/" target ="_blank" class="text-reset">Pykit Blog</a>
           </p>
 
